<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lucid Music</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_music">Start Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="save_event">Save Event</string>
    <string name="starttime_label">Time To Start</string>
    <string name="duration_label">Time To Reach Max Volume</string>
    <string name="max_volume">Max Volume</string>
    <string name="hours_label">Hours</string>
    <string name="minutes_label">Minutes</string>
    <string name="browse_label">Choose Song</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="preferences">sutton.bryan.lucidmusic</string>
    <string name="preference_duration">duration</string>
    <string name="preference_max_volume">max_volume</string>
    <string name="ok">Ok</string>
    <string name="title_activity_list_file">ListFileActivity</string>

</resources>
