<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sutton.bryan.lucidmusic.MainActivity$PlaceholderFragment">

    <Button android:id="@+id/starttime_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/starttime_label"
        android:onClick="openTimePickerDialog"
        android:layout_marginBottom="30dp" />

    <Button android:id="@+id/duration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Duration"
        android:onClick="openDurationDialog"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/starttime_layout"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/duration_layout">

        <TextView android:id="@+id/maxvol_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:layout_marginBottom="@dimen/label_margin"
            android:textColor="#000"
            android:text="@string/max_volume"/>

        <SeekBar android:id="@+id/maxvol_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >

        <Button android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_music"
            android:onClick="play" />

        <Button android:id="@+id/button_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/stop_music"
            android:onClick="stop" />

        <Button android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_event"
            android:onClick="save" />

        <Button android:id="@+id/button_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="test"
            android:onClick="test" />

    </LinearLayout>

</RelativeLayout>
