<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/timetomax_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal" >

        <TextView android:id="@+id/starttime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:layout_marginBottom="@dimen/label_margin"
            android:text="@string/duration_label"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <NumberPicker android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView android:id="@+id/hours_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_label"
                android:layout_gravity="center_vertical"
                android:textSize="24dp"/>

            <NumberPicker android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"/>

            <TextView android:id="@+id/minutes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_label"
                android:layout_gravity="center_vertical"
                android:textSize="24dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>